# geobot

./: .gitignore  README.md  pyproject.toml
src/geobot/: bot.py  error.py  geoguesser.py  tagbank.py
src/geobot/data/: data.json
